--- a/CefSharp.Wpf.Example/CefSharp.Wpf.Example.csproj
+++ b/CefSharp.Wpf.Example/CefSharp.Wpf.Example.csproj
@@ -107,15 +107,19 @@
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="Controls\CefSharpCommands.cs" />
+    <Compile Include="Controls\ChromiumWebBrowserIMESupport.cs" />
     <Compile Include="Controls\ChromiumWebBrowserWithScreenshotSupport.cs" />
     <Compile Include="Controls\NonReloadingTabControl.cs" />
     <Compile Include="Handlers\AccessibilityHandler.cs" />
     <Compile Include="Handlers\DisplayHandler.cs" />
     <Compile Include="Handlers\DragHandler.cs" />
+    <Compile Include="Handlers\IMEWpfKeyboardHandler.cs" />
     <Compile Include="Handlers\MenuHandler.cs" />
     <Compile Include="Handlers\LifespanHandler.cs" />
     <Compile Include="Handlers\RequestContextHandler.cs" />
     <Compile Include="Handlers\WpfBrowserProcessHandler.cs" />
+    <Compile Include="IME\IMEHandler.cs" />
+    <Compile Include="IME\NativeIME.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="SimpleMainWindow.xaml.cs">
       <DependentUpon>SimpleMainWindow.xaml</DependentUpon>
